--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,3 +3,7 @@ $secondary: #f44336;
 $grey: rgba(0, 0, 0, 0.09);
 $white: white;
 $divider: #e5e5e5;
+
+$headerHeight: 60px;
+$footerHeight: 100px;
+$bannerHeight: 180px;
