--- a/src/components/Dashboard/Dashboard.module.scss
+++ b/src/components/Dashboard/Dashboard.module.scss
@@ -1,3 +1,5 @@
+@import "../../variables";
+
 .banner {
   width: 100%;
 }
@@ -6,6 +8,10 @@
   display: flex;
   justify-content: flex-end;
   padding: 8px;
+}
+
+.body {
+  min-height: calc(560px - ($headerHeight + $bannerHeight + $footerHeight));
 }
 
 .filterBtn {
