feat(login): login and signup backend integration
axios interceptor, storing token in local storage, login and sign up backend integration

--- a/src/shared/components/RatingBox/RatingBox.module.scss
+++ b/src/shared/components/RatingBox/RatingBox.module.scss
@@ -8,6 +8,7 @@
   padding: 4px;
   border-radius: 4px;
   margin: 4px 0px;
+  text-align: center;
 }
 
 .midRating {
@@ -18,4 +19,9 @@
 .lowRating {
   @extend %ratingContainer;
   background-color: yellowgreen;
+}
+
+.noRating {
+  @extend %ratingContainer;
+  background-color: grey;
 }
