--- a/src/shared/components/GenericDialog/GenericDialog.module.scss
+++ b/src/shared/components/GenericDialog/GenericDialog.module.scss
@@ -1,19 +1,20 @@
 @import "../../../variables";
 
 .image {
-  width: 300px;
-  min-height: 450px;
+  opacity: 0.2;
 }
 
 .dialog {
   display: flex;
   flex-direction: column;
-  min-width: 250px;
+  width: 500px;
+  height: 500px;
 }
 
 .title {
-  font-weight: 800;
+  font-weight: 800 !important;
   color: $primary;
+  text-align: center;
 }
 
 .content {
