feat(bookdetails): created book details layout

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,6 +3,7 @@ $secondary: #f44336;
 $grey: rgba(0, 0, 0, 0.09);
 $white: white;
 $divider: #e5e5e5;
+$textGrey: #7d7a7a;
 
 $headerHeight: 60px;
 $footerHeight: 100px;
