--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -8,6 +8,8 @@
   display: flex;
   justify-content: space-between;
   padding: 16px;
+  position: absolute;
+  bottom: 0;
 
   .info {
     display: flex;
