--- a/src/App/App.module.scss
+++ b/src/App/App.module.scss
@@ -1,10 +1,10 @@
 @import "../variables";
 
 .pageContainer {
-    position: relative;
+  position: relative;
   min-height: 100vh;
 }
 
 .wrapper {
-    padding-bottom: $footerHeight;
+  padding-bottom: $footerHeight + 16px;
 }
