--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,6 +4,8 @@ $grey: rgba(0, 0, 0, 0.09);
 $white: white;
 $divider: #e5e5e5;
 $textGrey: #7d7a7a;
+$darkTextGrey: #878787;
+
 
 $headerHeight: 60px;
 $footerHeight: 100px;
