--- a/src/components/BookDetail/BookDetail.module.scss
+++ b/src/components/BookDetail/BookDetail.module.scss
@@ -81,6 +81,25 @@ $gap: 60px;
         }
       }
     }
+
+    .ratingHeading {
+      display: flex;
+      justify-content: space-between;
+
+      .title {
+        font-weight: bold;
+        font-size: 16px;
+      }
+
+      .rateBtn {
+        background-color: $primary;
+        border-radius: 4px;
+        font-weight: bold;
+        color: $white;
+        padding: 0px 8px;
+      }
+    }
+
   }
 }
 
